--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,6 +1,6 @@
 .topbar{
     width: 100%;
-    height: 100px;
+    height:50px;
     background-color: rgb(255, 255, 255);
    position: sticky;
    top:0;
@@ -12,6 +12,7 @@
    height: 50%;
   justify-content: space-between;
   padding: 0px 20px;
+ margin:15px 0px;
 }
 .logo{
     cursor: pointer;
@@ -43,8 +44,8 @@
     align-items: center;
 }
 .topAvatar{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     cursor: pointer;
 }
